Added icons to footer

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -21,4 +21,8 @@
         scroll-snap-type: x mandatory;
         padding: 1rem 0;
     }
+
+    ul::-webkit-scrollbar {
+        display: none;
+    }
 }
