--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -1,19 +1,33 @@
 footer.nav{
     position: fixed;
-    bottom: 1rem;
-    inset-inline: 1rem;
-
-    padding: 1rem;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 1rem 3rem 1rem 3rem;
     background-color: #355841;
-    border-radius: 5rem;
 
     nav{
         ul{
             display: flex;
             justify-content: space-between;
+            margin: auto;
 
-            li{
-                color: white;
+            a{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 5px;
+                text-decoration: none;
+
+                img{
+                    width: 30px;
+                    height: 30px;
+                }
+
+                p{
+                    font-size: 1em;
+                    color: white;
+                }
             }
         }
     }
