--- a/src/components/common/input/styles.module.scss
+++ b/src/components/common/input/styles.module.scss
@@ -1,18 +1,11 @@
+input.input {
+
+}
+
+label.label {
+
+}
+
 textarea.textarea {
-	border: 1px solid #dbdbdb;
-	border-radius: 4px;
-	padding: 0.5rem;
-	width: 100%;
-	height: 100px;
-	resize: none;
-	font-size: 1rem;
 
-	&:focus {
-		outline: none;
-		border-color: #3273dc;
-	}
-
-	&.error {
-		border-color: #e53e3e;
-	}
 }
