Quicksand font update

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -6,11 +8,11 @@
 }
 
 body{
-    background-color: var(--primary-bg-color);
+    background-color: #E6EBDC;
 }
 
 main{
-    padding: 15px;
+    padding: 20px;
 }
 
 a{
