--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
@@ -100,7 +100,7 @@ main {
   justify-content: space-between;
   padding: 1rem;
   padding-bottom: 5rem;
-  /* min-height: 100vh; */
+  min-height: 100vh;
 }
 
 a {
@@ -118,4 +118,4 @@ ul, ol{
   html {
     color-scheme: dark;
   }
-}
+} */
