--- a/src/components/plant-card/styles.module.scss
+++ b/src/components/plant-card/styles.module.scss
@@ -12,6 +12,8 @@ li.card{
 
     a{
         display: inline-block;
+        color: #355841;
+
         img{
             height: auto;
             width: 100%;
@@ -20,7 +22,7 @@ li.card{
         h2{
             padding: .5rem;
             font-size: 1rem;
-            font-weight: 400;
+            font-weight: 600;
             text-align: center;
         }
     }
