Revert "details page plus layouts temp"
This reverts commit d12a6ea2f70f597405a3e25d3933e6c259a11c17.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,8 +98,9 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  /* padding: 1rem; */
+  padding: 1rem;
   padding-bottom: 5rem;
+  /* min-height: 100vh; */
 }
 
 a {
