--- a/src/components/plants-container/plants-container.module.scss
+++ b/src/components/plants-container/plants-container.module.scss
@@ -1,6 +1,6 @@
 ul.container{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
     justify-content: center;
     gap: 20px;
+    grid-template-columns: 1fr 1fr;
 }
