fetch plant and applied loading spinner

--- a/src/app/plants/plant/[id]/page.module.scss
+++ b/src/app/plants/plant/[id]/page.module.scss
@@ -8,7 +8,7 @@ figure.cover{
     }
 }
 
-section.information{
+article.information{
     padding: 1rem;
     display: flex;
     flex-direction: column;
