--- a/src/components/searchbar/styles.module.scss
+++ b/src/components/searchbar/styles.module.scss
@@ -1,7 +1,7 @@
 input.search{
     width: 100%;
-    background-color: var(--secondary-bg-color);
-    border: none;
+    background-color: white;
+    border: 1px solid black;
     outline: none;
     padding: 10px;
     border-radius: 25px;
@@ -9,9 +9,9 @@ input.search{
     margin-bottom: 20px;
 
     &::placeholder{
-        color: var(--bos);
-        font-weight: bold;
-        font-size: 1em;
+        color: black;
+        font-weight: 500;
+        font-size: 1.2em;
         opacity: 0.5;
     }
 }
