--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,10 +8,6 @@
   font-family: "Quicksand", sans-serif;
 }
 
-body {
-  background-color: #e6ebdc;
-}
-
 main {
   padding: 20px;
 }
@@ -43,7 +39,7 @@ body {
 
 body {
   color: #355841;
-  background-color: #e6ebdc;
+  background-color: white;
 }
 
 header {
