--- a/src/components/plant-card/styles.module.scss
+++ b/src/components/plant-card/styles.module.scss
@@ -5,6 +5,7 @@ li.card{
     flex-direction: column;
     align-items: center;
     overflow: hidden;
+    flex-grow: 1;
     width: 165px;
     // height: 180px;
 
