--- a/src/components/plant-card/styles.module.scss
+++ b/src/components/plant-card/styles.module.scss
@@ -16,6 +16,7 @@ li.card{
         img{
             height: auto;
             width: 100%;
+            border-radius: 1rem;
         }
 
         div{
