--- a/src/components/common/input/styles.module.scss
+++ b/src/components/common/input/styles.module.scss
@@ -1,11 +1,23 @@
 input.input {
-
+    background-color: #E6EBDC;
+    border-radius: 1000px;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    color: #355841;
 }
 
 label.label {
-
+    font-size: 16px;
+    font-weight: bold;
 }
 
 textarea.textarea {
-
+    background-color: #E6EBDC;
+    border: none;
+    color: #355841;
+    border-radius: 20px;
+    min-height: 150px;
+    padding: 10px 20px;
+    font-size: 16px;
 }
