--- a/src/components/result/styles.module.scss
+++ b/src/components/result/styles.module.scss
@@ -5,7 +5,8 @@ li.result{
     border-radius: 0.5em;
 
     &.active{
-        outline: 2px solid red;
+        background-color: var(--bos);
+        color: white;
     }
 
     p{
