--- a/src/components/searchbar/styles.module.scss
+++ b/src/components/searchbar/styles.module.scss
@@ -1,17 +1,77 @@
-input.search{
-    width: 100%;
-    background-color: white;
-    border: 1px solid black;
-    outline: none;
-    padding: 10px;
-    border-radius: 25px;
-    margin-top: 21px;
-    margin-bottom: 20px;
+form.search {
+    padding: 1rem 0;
+    section {
+        position: relative;
+        display: flex;
+        align-items: center;
 
-    &::placeholder{
-        color: black;
-        font-weight: 500;
-        font-size: 1.2em;
-        opacity: 0.5;
+        $icon-space: 1rem;
+
+        span {
+            position: absolute;
+            top: 7px;
+            left: $icon-space / 2;
+            color: var(--bos);
+            font-size: 1.2em;
+        }
+
+        input {
+            width: 100%;
+            background-color: white;
+            color: var(--bos);
+            border: 1px solid black;
+            outline: none;
+            padding: 10px;
+            padding-left: $icon-space * 2;
+            border-radius: 25px;
+            margin-bottom: 20px;
+
+            &::placeholder {
+                color: black;
+                font-weight: 700;
+                font-size: 1.2em;
+                opacity: 0.3;
+            }
+        }
+
+        button {
+            position: absolute;
+            top: 3px;
+            right: $icon-space;
+            display: grid;
+            place-items: center;
+            width: 2rem;
+            height: 2rem;
+            background-color: var(--mosgroen);
+            border-radius: 50%;
+            cursor: pointer;
+        }
+    }
+
+    fieldset {
+        display: flex;
+        gap: 1rem;
+        border: none;
+
+        label{
+
+            display: grid;
+            place-items: center;
+            padding: .5rem 1rem;
+            border-radius: 1.5625rem;
+            font-weight: 700;
+            
+            input{
+                width: 0;
+                height: 0;
+                opacity: 0;
+                position: absolute;
+                top: 0;
+            }
+
+            &:has(input:checked){
+                background-color: var(--primary-bg-color);
+            }
+        }
     }
 }
