--- a/src/components/back-button/styles.module.scss
+++ b/src/components/back-button/styles.module.scss
@@ -1,6 +1,10 @@
 a.back{
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 20px;
+    left: 20px;
     z-index: 1;
+
+    img{
+        width: 40px;
+    }
 }
