--- a/src/components/information/styles.module.scss
+++ b/src/components/information/styles.module.scss
@@ -1,12 +1,16 @@
 h2.name{
-    font-weight: 400;
+    font-weight: 700;
+    font-size: 24px;
 }
 
 section.information{
     h3{
         font-weight: 500;
+        font-size: 20px;
     }
     p{
-        font-weight: 200;
+        margin-top: 5px;
+        font-weight: 300;
+        font-size: 16px;
     }
 }
