--- a/src/components/progress-bar/styles.module.scss
+++ b/src/components/progress-bar/styles.module.scss
@@ -5,18 +5,22 @@ section.progress{
     .step{
         display: grid;
         place-items: center;
-        width: 2rem;
-        height: 2rem;
+        width: 3rem;
+        height: 3rem;
         background-color: #C8CFBA;
         border-radius: 50%;
         font-weight: 700;
+        color: #355841;
 
         &.active{
             background-color: #355841;
+            color: #C8CFBA;
         }
-
+        
         &.current{
             border: 2px solid black;    
         }   
     }
+
+
 }
