updated next component

--- a/src/components/next-button/styles.module.scss
+++ b/src/components/next-button/styles.module.scss
@@ -2,7 +2,7 @@ button.next{
     background-color: var(--bos);
     color: white;
     position: fixed;
-    top: 85%;
+    bottom: 5rem;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 20px;
