--- a/src/components/progress-bar/styles.module.scss
+++ b/src/components/progress-bar/styles.module.scss
@@ -16,6 +16,30 @@ section.progress {
         &.active {
             background-color: #355841;
             color: #C8CFBA;
+
+            &:nth-of-type(2)::after {
+                content: '';
+                position: absolute;
+                top: 6.5rem;
+                left: 1rem;
+                width: 70%;
+                height: 15px;
+                border-radius: 15px;
+                background-color: red;
+                z-index: -2;
+            }
+
+            &:nth-of-type(3)::after {
+                content: '';
+                position: absolute;
+                top: 6.5rem;
+                left: 1rem;
+                width: 90%;
+                height: 15px;
+                border-radius: 15px;
+                background-color: blue;
+                z-index: -3;
+            }
         }
 
         &.current {
@@ -27,11 +51,23 @@ section.progress {
             position: absolute;
             top: 6.5rem;
             left: 1rem;
-            width: 20rem;
+            width: 90%;
             height: 15px;
             border-radius: 15px;
             background-color: #C8CFBA;
-            z-index: -2;
+            z-index: -10;
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 6.5rem;
+            left: 1rem;
+            width: 25%;
+            height: 15px;
+            border-radius: 15px;
+            background-color: #355841;
+            z-index: -1;
         }
 
     }
