--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
 :root{
-    --primary-bg-color: #E6EBDC;
+    --primary-bg-color: #00CD8E;
     --mosgroen: #92A257;
     --bos: #355841;
     --secondary-bg-color: #C8CFBA;
