map component and about me component :rocket:

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -10,7 +10,7 @@
 
 body {
   color: #355841;
-  background-color: #fff;
+  background-color: #F2F5FF;
 }
 
 html,
@@ -21,6 +21,7 @@ body {
 
 header {
   padding: 1rem;
+  padding-top: 3rem;
 }
 
 main {
