--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -4,7 +4,7 @@ footer.nav{
     left: 0;
     right: 0;
     padding: 1rem 3rem 1rem 3rem;
-    background-color: #355841;
+    background-color: white;
 
     nav{
         ul{
@@ -34,7 +34,7 @@ footer.nav{
 
                 p{
                     font-size: 1em;
-                    color: white;
+                    color: black;
                 }
             }
         }
