--- a/src/app/plants/plant/[slug]/[id]/page.module.scss
+++ b/src/app/plants/plant/[slug]/[id]/page.module.scss
@@ -7,11 +7,12 @@ figure.cover{
     z-index: 1;
 
     div{
-        height: 100%;
+        position: fixed;
+        height: 100vh;
         width: 100%;
         background-color: #355841;
         opacity: 0.5;
-        position: absolute;
+        z-index: 1;
     }
 
     img{
@@ -22,17 +23,19 @@ figure.cover{
 }
 
 article.information{
-    z-index: 2;
-    background-color: white;
     position: absolute;
-    top: 35vh;
-    left: 0;
-    right: 0;
-    padding: 30px;
-    border-radius: 30px 30px 0 0;
     display: flex;
     flex-direction: column;
     gap: 20px;
+    top: 35vh;
+    left: 0.25rem;
+    right: 0.25rem;
+    min-height: 65vh;
+    padding: 30px;
+    padding-bottom: 8rem;
+    border-radius: 30px 30px 0 0;
+    background-color: white;
+    z-index: 2;
 }
 
 a.test{
