--- a/src/components/back-button/styles.module.scss
+++ b/src/components/back-button/styles.module.scss
@@ -1,8 +1,9 @@
 a.back{
-    position: absolute;
+    position: fixed;
     top: 20px;
     left: 20px;
-    z-index: 1;
+    z-index: 5;
+    filter: drop-shadow(0px 0px 3px black);
 
     img{
         width: 40px;
