--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -20,7 +20,7 @@ body {
 }
 
 header {
-  padding: 1rem;
+  // padding: 1rem;
   padding-top: 3rem;
 }
 
@@ -30,6 +30,7 @@ main {
   justify-content: space-between;
   padding: 1rem;
   padding-bottom: 6rem;
+  gap: 45px;
 }
 
 a {
