color changes progressbar, results

--- a/src/components/form/foto-results/styles.module.scss
+++ b/src/components/form/foto-results/styles.module.scss
@@ -5,7 +5,7 @@
 
     button {
         padding: 1rem 2rem;
-        background-color: var(--bos);
+        background-color: #00CD8E;
         border-radius: 2rem;
         font-size: 1.25rem;
         font-weight: bold;
