--- a/src/components/next-button/styles.module.scss
+++ b/src/components/next-button/styles.module.scss
@@ -1,5 +1,5 @@
 button.next{
-    background-color: var(--bos);
+    background-color: #00CD8E;
     color: white;
     position: fixed;
     bottom: 5rem;
