--- a/src/components/common/file/styles.module.scss
+++ b/src/components/common/file/styles.module.scss
@@ -26,30 +26,17 @@ section.file {
         }
     }
     
-    section{
+    > section{
+        position: relative;
         display: flex;
+        flex-direction: column;
         gap: 1rem;
-        height: 100px;
-        border: 1px solid var(--mosgroen);
-        padding: 1rem;
         border-radius: 0.5rem;
 
         img{
-            width: auto;
-            height: 100%;
-        }
-
-        div{
-            display: flex;
-            flex-direction: column;
             width: 100%;
-        }
-
-        button {
-            padding: 0;
-            aspect-ratio: 1/1;
-            border: none;
-            cursor: pointer;
+            height: auto;
+            border-radius: .5rem;
         }
     }
 }
