adjusted progresbar, updated colors, minor positioning changes

--- a/src/components/form/swap/styles.module.scss
+++ b/src/components/form/swap/styles.module.scss
@@ -34,7 +34,7 @@ div{
     
             span{
                 font-weight: 300;
-                color: var(--mosgroen);
+                color: white;
             }
         }
     
