--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 :root{
     --primary-bg-color: #00CD8E;
     --mosgroen: #92A257;
-    --bos: #355841;
-    --secondary-bg-color: #C8CFBA;
+    --bos: #00CD8E;
+    --secondary-bg-color: white;
 }
