--- a/src/components/common/button/styles.module.scss
+++ b/src/components/common/button/styles.module.scss
@@ -1,5 +1,5 @@
 button.button{
-    background-color: #355841;
+    background-color: #00CD8E;
     color: white;
     padding: 10px 20px;
     font-size: 16px;
