--- a/src/components/common/input/styles.module.scss
+++ b/src/components/common/input/styles.module.scss
@@ -1,5 +1,5 @@
 input.input {
-    background-color: #E6EBDC;
+    background-color: white;
     border-radius: 1000px;
     padding: 10px 20px;
     font-size: 16px;
@@ -13,7 +13,7 @@ label.label {
 }
 
 textarea.textarea {
-    background-color: #E6EBDC;
+    background-color: white;
     border: none;
     color: #355841;
     border-radius: 20px;
