--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -4,7 +4,7 @@
     gap: 1rem;
     height: 100%;
 
-    div{
+    > div{
         display: flex;
         justify-content: space-between;
         align-items: center;
