--- a/src/components/plant-card/styles.module.scss
+++ b/src/components/plant-card/styles.module.scss
@@ -11,12 +11,18 @@ li.card{
 
     a{
         display: inline-block;
+        width: 100%;
         color: #355841;
 
-        img{
-            height: auto;
-            width: 100%;
-            border-radius: 0.5rem;
+        section{
+            height: 200px;
+
+            img{
+                object-fit: cover;
+                height: 100%;
+                width: 100%;
+                border-radius: 0.5rem;
+            }
         }
 
         div{
