--- a/src/components/information/styles.module.scss
+++ b/src/components/information/styles.module.scss
@@ -1,16 +1,23 @@
-h2.name{
-    font-weight: 700;
-    font-size: 24px;
+section.heading{
+    h2{
+        font-size: 24px;
+        font-weight: 700;
+        margin-bottom: 5px;
+    }
+    p{
+        font-size: 16px;
+        font-weight: 400;
+    }
 }
 
 section.information{
     h3{
-        font-weight: 500;
-        font-size: 20px;
+        font-size: 16px;
+        font-weight: 700;
+        margin-bottom: 5px;
     }
     p{
-        margin-top: 5px;
-        font-weight: 300;
         font-size: 16px;
+        font-weight: 400;
     }
 }
