--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -34,4 +34,20 @@
     ul::-webkit-scrollbar {
         display: none;
     }
+
+    section.flex{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+
+@media (min-width: 730px){
+    .intro{
+        section.flex{
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+        }
+    }
 }
