lil responsive and cleanup :lipstick:

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -44,6 +44,7 @@
 
 @media (min-width: 730px){
     .intro{
+        gap: 4rem;
         section.flex{
             flex-direction: row;
             justify-content: space-between;
