--- a/src/components/common/file/styles.module.scss
+++ b/src/components/common/file/styles.module.scss
@@ -40,3 +40,11 @@ section.file {
         }
     }
 }
+
+@media (min-width:730px){
+    section.file{
+        max-width: 30em;
+        display: flex;
+        align-self: center;
+    }
+}
