--- a/src/components/form/scan-foto/styles.module.scss
+++ b/src/components/form/scan-foto/styles.module.scss
@@ -35,3 +35,15 @@
         }
     }
 }
+
+@media (min-width:730px){
+    .identifier{
+        
+        h1{
+            text-align: center;
+        }
+        p{
+            text-align: center;
+        }
+    }
+}
