--- a/src/components/progress-bar/styles.module.scss
+++ b/src/components/progress-bar/styles.module.scss
@@ -117,3 +117,42 @@ nav.progress {
         }
     }
 }
+
+@media (min-width:730px){
+    nav.progress {
+        ul {
+            li {
+                .step {
+                    $position-top: 16.8rem;
+                    $position-left: 8.5rem;
+                    $bar-height: 15px;
+
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        top: $position-top;
+                        left: $position-left;
+                        // width: 88%;
+                        height: $bar-height;
+                        border-radius: 15px;
+                        background-color: white;
+                        z-index: -10;
+                        right: 10rem;
+                    }
+
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        left: $position-left;
+                        top: $position-top;
+                        width: 10%;
+                        height: $bar-height;
+                        border-radius: 15px;
+                        background-color: #00CD8E;
+                        z-index: -1;
+                    }
+                }
+            }
+        }
+    }
+}
