Swap from details page

--- a/src/components/common/input/styles.module.scss
+++ b/src/components/common/input/styles.module.scss
@@ -1,3 +1,5 @@
+$placeholder-opacity: 0.5;
+
 input.input {
     background-color: white;
     border-radius: 1000px;
@@ -5,6 +7,10 @@ input.input {
     font-size: 16px;
     border: none;
     color: #355841;
+    
+    &::placeholder {
+        opacity: $placeholder-opacity;
+    }
 }
 
 label.label {
@@ -17,7 +23,11 @@ textarea.textarea {
     border: none;
     color: #355841;
     border-radius: 20px;
-    min-height: 150px;
+    min-height: 100px;
     padding: 10px 20px;
     font-size: 16px;
+
+    &::placeholder {
+        opacity: $placeholder-opacity;
+    }
 }
