--- a/src/components/form/swap/styles.module.scss
+++ b/src/components/form/swap/styles.module.scss
@@ -40,6 +40,10 @@ section.options{
 
                 input {
                     width: 100%;
+
+                    &::placeholder{
+                        opacity: .5;
+                    }
                 }
             }
         }
