--- a/src/components/swap/styles.module.scss
+++ b/src/components/swap/styles.module.scss
@@ -1,16 +1,13 @@
 section.container{
     position: fixed;
-    background-color: var(--primary-bg-color);
-    bottom: 20px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 133px;
     display: grid;
     grid-template-columns: 1fr;
+    bottom: 1rem;
+    left: 50%;
+    width: 100%;
     padding: 10px;
-    // flex-direction: column;
-
+    background-color: var(--primary-bg-color);
+    transform: translate(-50%, -50%);
 
     div.inner{
         display: flex;
@@ -60,7 +57,6 @@ section.container{
             div.image{
                 height: 50px;
                 width: 50px;
-                // background-color: black;
                 border: 1px dashed black;
 
                 img{
@@ -75,5 +71,9 @@ section.container{
                 width: 50px;
             }
         }
+    }
+
+    button{
+        background-color: var(--tertiary-bg-color);
     }
 }
