active filter button padding

--- a/src/components/searchbar/styles.module.scss
+++ b/src/components/searchbar/styles.module.scss
@@ -74,6 +74,7 @@ form.search {
 
             &:has(input:checked){
                 background-color: var(--primary-bg-color);
+                padding: 0 15px 0 15px;
             }
 
             &:hover{
