--- a/src/components/next-button/styles.module.scss
+++ b/src/components/next-button/styles.module.scss
@@ -5,7 +5,8 @@ button.next{
     bottom: 5rem;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
     font-weight: 800;
     border-radius: 2rem;
     width: 80%;
