--- a/src/components/progress-bar/styles.module.scss
+++ b/src/components/progress-bar/styles.module.scss
@@ -222,7 +222,7 @@ nav.progress {
                     .step {
                         &.active {
                             &::after {
-                                width: 72%;
+                                // width: 72%;
                                 z-index: -2;
                             }
                         }
