--- a/src/components/common/input/styles.module.scss
+++ b/src/components/common/input/styles.module.scss
@@ -2,7 +2,7 @@ $placeholder-opacity: 0.5;
 
 input.input {
     background-color: white;
-    border-radius: 1000px;
+    border-radius: 5rem;
     padding: 10px 20px;
     font-size: 16px;
     border: none;
@@ -10,6 +10,10 @@ input.input {
     
     &::placeholder {
         opacity: $placeholder-opacity;
+    }
+    
+    &:not(:valid){
+        border: 2px solid red;
     }
 }
 
