updated swap component

--- a/src/components/swap/styles.module.scss
+++ b/src/components/swap/styles.module.scss
@@ -5,6 +5,7 @@ section.container{
     bottom: 1rem;
     left: 50%;
     width: 100%;
+    min-height: 7.5rem;
     padding: 10px;
     background-color: var(--primary-bg-color);
     transform: translate(-50%, -50%);
