--- a/src/components/searchbar/styles.module.scss
+++ b/src/components/searchbar/styles.module.scss
@@ -18,7 +18,7 @@ form.search {
         input {
             width: 100%;
             background-color: white;
-            color: var(--bos);
+            color: var(--tertiary-bg-color);
             border: 1px solid black;
             outline: none;
             padding: 10px;
