--- a/src/components/form/swap/styles.module.scss
+++ b/src/components/form/swap/styles.module.scss
@@ -24,7 +24,7 @@ section.options{
             border: 3px solid var(--bos);
         }
         
-        div{
+        form{
             display: flex;
             flex-direction: column;
             gap: 10px;
