--- a/src/components/common/button/styles.module.scss
+++ b/src/components/common/button/styles.module.scss
@@ -14,3 +14,9 @@ button.button{
         cursor: not-allowed;
     }
 }
+
+// @media (min-width: 730px){
+//     button.button{
+//         bottom: 9rem;
+//     }
+// }
