--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,71 +1,78 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
-@import "./variables";  
+@import "./variables";
 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: "Quicksand", sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Quicksand", sans-serif;
 }
 
 body {
-  color: #355841;
-  background-color: #F2F5FF;
+    color: #355841;
+    background-color: #f2f5ff;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 header {
-  padding-top: 3rem;
+    padding-top: 3rem;
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 1rem;
-  padding-bottom: 10rem;
-  gap: 45px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem;
+    padding-bottom: 10rem;
+    gap: 45px;
 }
 
 a {
-  text-decoration: none;
-}
+    text-decoration: none;
+    color: inherit;
+    
+    &#skip-to-nav {
+        position: absolute;
+        top: 1rem;
+        left: 1rem;
+        opacity: 0.1;
 
-li {
-  list-style: none;
+        &:focus {
+            opacity: 1;
+        }
+    }
 }
 
 button {
-  cursor: pointer;
-  border: none;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+    cursor: pointer;
+    border: none;
 }
 
 ul,
 ol {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    list-style: none;
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+    html {
+        color-scheme: dark;
+    }
 }
 
 @media (min-width: 730px) {
-  main {
-    padding: 8rem;
-    padding-bottom: 10rem;
-  }
+    main {
+        padding: 8rem;
+        padding-bottom: 10rem;
+    }
 }
