--- a/src/components/searchbar/styles.module.scss
+++ b/src/components/searchbar/styles.module.scss
@@ -55,6 +55,12 @@ form.search {
     fieldset {
         display: flex;
         border: none;
+        border-radius: 5rem;
+        &:focus-within {
+            padding: .25rem;
+            outline: 1px solid var(--primary-bg-color);
+            background-color: var(--secondary-bg-color);
+        }
 
         label{
             display: grid;
